# secreg-cpp

./: CMakeLists.txt  LICENSE  README.md  build.sh
assets/: pam_secreg.c  registry.service  sreg-completion.bash
cmake/: FindSQLite3.cmake  Uninstall.cmake.in
docs/: API.md  ARCHITECTURE.md  SECURITY.md
src/cli/: CMakeLists.txt  cli.cpp  cli.h  commands.cpp  commands.h  main.cpp
src/crypto/: CMakeLists.txt  crypto_manager.cpp  crypto_manager.h  encrypt.cpp  encrypt.h  keyring.cpp  keyring.h
src/daemon/: CMakeLists.txt  acl.cpp  acl.h  audit.cpp  audit.h  auth.cpp  auth.h  daemon.cpp  daemon.h  main.cpp  server.cpp  server.h
src/shared/: CMakeLists.txt  constants.cpp  constants.h  errors.cpp  errors.h  types.cpp  types.h  utils.cpp  utils.h
src/storage/: CMakeLists.txt  engine.cpp  engine.h  schema.cpp  schema.h
src/tests/: CMakeLists.txt
